@@ -23,6 +23,7 @@ Process Hacker
    * #2845427 - "Indicator integer overflow"
    * #2847691 - "Apply button bug"
    * #2849052 - "not defined by current visual style"
+   * #2863305 - "Unhandled exception in comparer"
    * Critical KProcessHacker denial-of-service security issues
    * Incorrect menu items for System threads
    * Crash when viewing error details in the event 
